<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Price Finder</string>
    <string name="btnSearch">Search</string>
    <string name="action_settings">Settings</string>
    <string name="CSE_BaseURL">https://www.googleapis.com/customsearch/v1</string>
    <string name="CSE_APIKey">AIzaSyAyx1EBa-L3jbFPlJUxe4Q5sDYE8KOEdg4</string>
    <string name="CSE_CX">011347153744255752042:m_oabqmrlys</string>
    <string name="title_activity_product_details">ProductDetails</string>
    <string name="action_scan">Barcode Scan</string>
    <string name="action_voice">Voice Search</string>
    <string name="action_sort_by_price">Sort by Price</string>
    <string name="action_sort_by_name">Sort by Name</string>
    <string name="action_my_favorites">My Favorites</string>
    <string name="btn_load_more">Load more...</string>
    <string name="title_activity_view_site">ViewSite</string>
    <string name="UPC_APIKey">69487d969ca01b08b63c0263084486d6</string>
    <string name="UPC_BaseURL">http://api.upcdatabase.org/json/</string>
</resources>